[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "console>=0.9910",
    "cryptography>=44.0.0",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "tls-client>=1.0.1",
    "urllib3>=2.3.0",
]
